--- a/index.html
+++ b/index.html
@@ -24,29 +24,72 @@
       <ul>
         <li>
           <img src="./img/1.jpg" alt="" />
-          <p></p>
-          <h2></h2>
-          <p></p>
+          <p>LIFESTYLE</p>
+          <h2>More than just a music festival</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea.
+          </p>
         </li>
         <li>
           <img src="./img/2.jpg" alt="" />
-          <p></p>
-          <h2></h2>
-          <p></p>
+          <p>LIFESTYLE</p>
+          <h2>Life tastes better with coffee</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea.
+          </p>
         </li>
         <li>
           <img src="./img/3.jpg" alt="" />
-          <p></p>
-          <h2></h2>
-          <p></p>
+          <p>PHOTODAIRY</p>
+          <h2>American dream</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea.
+          </p>
         </li>
         <li>
           <img src="./img/4.jpg" alt="" />
-          <p></p>
-          <h2></h2>
-          <p></p>
+          <p>PHOTODAIRY</p>
+          <h2>A day exploring the Alps</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea.
+          </p>
+        </li>
+        <li>
+          <img src="./img/5.jpg" alt="" />
+          <p>LIFESTYLE</p>
+          <h2>Top 10 song for running</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea.
+          </p>
+        </li>
+        <li>
+          <img src="./img/6.jpg" alt="" />
+          <p>LIFESTYLE</p>
+          <h2>Cold winter days</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea.
+          </p>
         </li>
       </ul>
+      <button type="button">Load more</button>
     </main>
   </body>
 </html>
