--- a/index.html
+++ b/index.html
@@ -5,16 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./сss/styles.css" />
   </head>
   <body>
     <!-- Секція Хедер -->
     <header>
-      <nav>
-        <ul>
-          <li><a href="/">LIFESTYLE</a></li>
-          <li><a href="/">PHOTODIARY</a></li>
-          <li><a href="/">MUSIC</a></li>
-          <li><a href="/">TRAVEL</a></li>
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-list-item">
+            <a class="nav-list-link" href="/">LIFESTYLE</a>
+          </li>
+          <li class="nav-list-item">
+            <a class="nav-list-link" href="/">PHOTODIARY</a>
+          </li>
+          <li class="nav-list-item">
+            <a class="nav-list-link" href="/">MUSIC</a>
+          </li>
+          <li class="nav-list-item">
+            <a class="nav-list-link" href="/">TRAVEL</a>
+          </li>
         </ul>
       </nav>
     </header>
