--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <ul>
         <li>
           <img src="./img/1.jpg" alt="" />
-          <p>LIFESTYLE</p>
+          <p class="category">LIFESTYLE</p>
           <h2>More than just a music festival</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -44,7 +44,7 @@
         </li>
         <li>
           <img src="./img/2.jpg" alt="" />
-          <p>LIFESTYLE</p>
+          <p class="category">LIFESTYLE</p>
           <h2>Life tastes better with coffee</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -55,7 +55,7 @@
         </li>
         <li>
           <img src="./img/3.jpg" alt="" />
-          <p>PHOTODAIRY</p>
+          <p class="category">PHOTODAIRY</p>
           <h2>American dream</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -66,7 +66,7 @@
         </li>
         <li>
           <img src="./img/4.jpg" alt="" />
-          <p>PHOTODAIRY</p>
+          <p class="category">PHOTODAIRY</p>
           <h2>A day exploring the Alps</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -77,7 +77,7 @@
         </li>
         <li>
           <img src="./img/5.jpg" alt="" />
-          <p>LIFESTYLE</p>
+          <p class="category">LIFESTYLE</p>
           <h2>Top 10 song for running</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -88,7 +88,7 @@
         </li>
         <li>
           <img src="./img/6.jpg" alt="" />
-          <p>LIFESTYLE</p>
+          <p class="category">LIFESTYLE</p>
           <h2>Cold winter days</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
